--- a/app/src/main/res/menu/meny_layout1.xml
+++ b/app/src/main/res/menu/meny_layout1.xml
@@ -6,7 +6,7 @@
         android:title="Kolor tekstu - zielony" />
     <item
         android:id="@+id/item2"
-        android:title="Kolor tekstu - niebieski" />
+        android:title="Kolor tekstu - żółty" />
     <item
         android:id="@+id/item3"
         android:title="Kolor tekstu - czerwony" />
@@ -17,7 +17,7 @@
                 android:title="Zmien kolor tła - zielony"></item>
             <item
                 android:id="@+id/item42"
-                android:title="Zmien kolor tła - niebieski"></item>
+                android:title="Zmien kolor tła - żółty"></item>
             <item
                 android:id="@+id/item43"
                 android:title="Zmien kolor tła - czerwony"></item>
